Accessing-Object-Storage-in-ODF/object-storage-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-object-storage
  namespace: object-storage-lab
spec:
  podSelector:
    matchLabels:
      app: s3-app
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: openshift-storage
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
